# Choice_Learning_for_Credit_Card_Offers

./: README.md  pyproject.toml  run_bonus2.py  run_ching.py  run_choice_learn_market_shocks.py  run_cl_models.py  run_cl_with_shocks.py  run_lu.py  run_models.py  run_zhang_with_lu.py  simulation_run.py
_debug_cache/: lu_shrinkage_k.json
bonus2/: bonus2_diagnostics.py  bonus2_estimator.py  bonus2_evaluate.py  bonus2_input_validation.py  bonus2_model.py  bonus2_posterior.py  bonus2_updates.py
ching/: stockpiling_diagnostics.py  stockpiling_estimator.py  stockpiling_evaluate.py  stockpiling_input_validation.py  stockpiling_model.py  stockpiling_posterior.py  stockpiling_updates.py
ching copy/: run_ching.py  stockpiling_diagnostics.py  stockpiling_estimator.py  stockpiling_evaluate.py  stockpiling_model.py
datasets/: bonus2_dgp.py  ching_dgp.py  choice_learn_market_shocks_dgp.py  dgp.py  lu_dgp.py  synthetic_lu25.py  zhang_with_lu_dgp.py
docs/: ARCHITECTURE.md  CONVENTIONS.md  DECISIONS.md  Part2_Report.docx  Q3-Report.docx  inter interview 2026 question 3 marketing ver 2.docx
kif.egg-info/: SOURCES.txt  requires.txt  top_level.txt
lu/: lu_gibbs.py
market_shock_estimators/: assess_estimator.py  blp.py  inversion.py  lu_diagnostics.py  lu_kernels.py  lu_posterior.py  lu_shrinkage.py  lu_shrinkage_diagnostics.py  lu_shrinkage_kernels.py  lu_shrinkage_tuning.py  lu_shrinkage_updates.py  lu_tuning.py  lu_updates.py  lu_validate_input.py  rw_mh.py  tmh.py
models/: deephalo_lu25.py  lu25_model.py
tests/: conftest.py  test_blp.py  test_dgp.py  test_inversion.py  (+7 more)
(+74 files in other folders)
