[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kif"
version = "0.1.0"
description = "kif implementation code (extends choice-learn)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "tensorflow",
  "tensorflow-probability",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["models*", "datasets*", "toolbox*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

