
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kif"
version = "0.1.0"
description = "kif implementation code (extends choice-learn)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "tensorflow",
  "tensorflow-probability",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["datasets*", "market_shock_estimators*", "models*", "toolbox*"]
